// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsWrapper > renders correctly if side menu is visible for view, but not allowed for user 1`] = `
<div
  data-v-app=""
>
  
  <settings-toolbar-stub
    isoverviewopen="false"
    issettingsmainview="false"
    modulename="test"
  />
  <div
    class="d-flex px-4 fill-height bg-quaternary-dark py-8"
  >
    <!--v-if-->
    <div
      class="d-flex justify-center full-width"
    >
      <router-view-stub />
    </div>
  </div>
  
</div>
`;

exports[`SettingsWrapper > renders correctly in a view where side menu is not visible 1`] = `
<div
  data-v-app=""
>
  
  <settings-toolbar-stub
    isoverviewopen="false"
    issettingsmainview="false"
    modulename="test"
  />
  <div
    class="d-flex px-4 fill-height bg-quaternary-dark py-8"
  >
    <!--v-if-->
    <div
      class="d-flex justify-center full-width"
    >
      <router-view-stub />
    </div>
  </div>
  
</div>
`;

exports[`SettingsWrapper > renders correctly in a view where side menu is visible 1`] = `
<div
  data-v-app=""
>
  
  <settings-toolbar-stub
    isoverviewopen="false"
    issettingsmainview="false"
    modulename="test"
  />
  <div
    class="d-flex px-4 fill-height bg-quaternary-dark py-8"
  >
    <settings-side-menu-stub
      class="mr-4"
    />
    <div
      class="d-flex justify-center full-width"
    >
      <router-view-stub />
    </div>
  </div>
  
</div>
`;

exports[`SettingsWrapper > renders correctly in groupEdit 1`] = `
<div
  data-v-app=""
>
  
  <settings-toolbar-stub
    isoverviewopen="false"
    issettingsmainview="false"
    modulename="test"
  />
  <div
    class="d-flex px-4 fill-height bg-quaternary-dark py-8"
  >
    <!--v-if-->
    <div
      class="d-flex justify-center full-width"
    >
      <router-view-stub />
    </div>
  </div>
  
</div>
`;

exports[`SettingsWrapper > renders correctly in main view 1`] = `
<div
  data-v-app=""
>
  
  <settings-toolbar-stub
    isoverviewopen="false"
    issettingsmainview="true"
    modulename="settings"
  />
  <settings-main-stub />
  
</div>
`;

exports[`SettingsWrapper > renders correctly in mobile view 1`] = `
<div
  data-v-app=""
>
  
  <settings-toolbar-stub
    isoverviewopen="false"
    issettingsmainview="false"
    modulename="test"
  />
  <div
    class="d-flex px-4 fill-height bg-quaternary-dark py-4"
  >
    <!--v-if-->
    <div
      class="d-flex justify-center full-width"
    >
      <router-view-stub />
    </div>
  </div>
  
</div>
`;
